--- a/Prevu.Localization/Properties/Resources.ar.resx
+++ b/Prevu.Localization/Properties/Resources.ar.resx
@@ -1041,4 +1041,376 @@
   <data name="ESTOP NOT OK" xml:space="preserve">
     <value>estop ليس موافق</value>
   </data>
+  <data name="DETAILS" xml:space="preserve">
+    <value>تفاصيل</value>
+  </data>
+  <data name="CREATE NEW USER GROUP" xml:space="preserve">
+    <value>إنشاء مجموعة مستخدمين جديدة</value>
+  </data>
+  <data name="PASSWORD" xml:space="preserve">
+    <value>كلمة المرور</value>
+  </data>
+  <data name="SAVE ALL" xml:space="preserve">
+    <value>احفظ الكل</value>
+  </data>
+  <data name="ELECTRICAL DRAWING" xml:space="preserve">
+    <value>الرسم الكهربائي</value>
+  </data>
+  <data name="LOADING" xml:space="preserve">
+    <value>جار التحميل</value>
+  </data>
+  <data name="PROGRESS" xml:space="preserve">
+    <value>تقدم</value>
+  </data>
+  <data name="WEIGHT" xml:space="preserve">
+    <value>وزن</value>
+  </data>
+  <data name="FLOWRATE" xml:space="preserve">
+    <value>معدل المد و الجزر</value>
+  </data>
+  <data name="REFERENCE" xml:space="preserve">
+    <value>مرجع</value>
+  </data>
+  <data name="PRESSURE" xml:space="preserve">
+    <value>ضغط</value>
+  </data>
+  <data name="EVENT PAGE" xml:space="preserve">
+    <value>صفحة الحدث</value>
+  </data>
+  <data name="CRITICAL ALARM!" xml:space="preserve">
+    <value>إنذار حرج!</value>
+  </data>
+  <data name="CRITICAL FAULT PRESENT" xml:space="preserve">
+    <value>خطأ حرج موجود</value>
+  </data>
+  <data name="FULL RANGE ADJUST" xml:space="preserve">
+    <value>ضبط النطاق الكامل</value>
+  </data>
+  <data name="MOTOR CURRENT" xml:space="preserve">
+    <value>السيارات الحالية</value>
+  </data>
+  <data name="SENSOR ID" xml:space="preserve">
+    <value>معرف جهاز الاستشعار</value>
+  </data>
+  <data name="ELECTRICAL ID" xml:space="preserve">
+    <value>معرف كهربائي</value>
+  </data>
+  <data name="OK STATUS" xml:space="preserve">
+    <value>طيب الحالة</value>
+  </data>
+  <data name="EL. DRAWING" xml:space="preserve">
+    <value>إل. رسم</value>
+  </data>
+  <data name="MOTOR TEMPERATURE" xml:space="preserve">
+    <value>درجة حرارة المحرك</value>
+  </data>
+  <data name="OVERLOAD PROTECTION" xml:space="preserve">
+    <value>حماية من زيادة الحمولة</value>
+  </data>
+  <data name="COMMAND ON" xml:space="preserve">
+    <value>الأمر قيد التشغيل</value>
+  </data>
+  <data name="NO CRITICAL FAULT" xml:space="preserve">
+    <value>لا خطأ فادح</value>
+  </data>
+  <data name="NO MINOR FAULT" xml:space="preserve">
+    <value>لا عيب طفيف</value>
+  </data>
+  <data name="LOCAL DISCONNECT" xml:space="preserve">
+    <value>قطع الاتصال المحلي</value>
+  </data>
+  <data name="COMPONENT ENABLED" xml:space="preserve">
+    <value>تم تمكين المكون</value>
+  </data>
+  <data name="RUN AUTO INTERLOCKS" xml:space="preserve">
+    <value>تشغيل الأقفال التلقائية</value>
+  </data>
+  <data name="START AUTO INTERLOCKS" xml:space="preserve">
+    <value>بدء القفل التلقائي</value>
+  </data>
+  <data name="NO-STOP AUTO INTERLOCKS" xml:space="preserve">
+    <value>الأقفال التلقائية - لا توقف</value>
+  </data>
+  <data name="OVERLOAD MINIMUM TIME EXPIRED" xml:space="preserve">
+    <value>منتهية الحد الأدنى لدرجة الحرارة الزائدة</value>
+  </data>
+  <data name="UPSTREAM SAFETY" xml:space="preserve">
+    <value>أمان Upsream</value>
+  </data>
+  <data name="DOWNSTREAM SAFETY" xml:space="preserve">
+    <value>سلامة المصب</value>
+  </data>
+  <data name="MINIMUM RESTART TIME" xml:space="preserve">
+    <value>الحد الأدنى لوقت إعادة التشغيل</value>
+  </data>
+  <data name="CURRENT OK FOR MATERIAL" xml:space="preserve">
+    <value>موافق الحالي للمادة</value>
+  </data>
+  <data name="PLC CONNECTION LOST!" xml:space="preserve">
+    <value>فقد اتصال PLC!</value>
+  </data>
+  <data name="SERVER CONNECTION LOST!" xml:space="preserve">
+    <value>انقطع الاتصال بالخادم!</value>
+  </data>
+  <data name="PLC SIMULATION" xml:space="preserve">
+    <value>محاكاة PLC</value>
+  </data>
+  <data name="TIME CYCLE" xml:space="preserve">
+    <value>دورة زمنية</value>
+  </data>
+  <data name="COMMAND OPEN" xml:space="preserve">
+    <value>الأمر مفتوح</value>
+  </data>
+  <data name="UPSTREAM SAFETY (FALSE --&gt; RESET ENABLE)" xml:space="preserve">
+    <value>أمان المنبع (خطأ -&gt; تمكين إعادة التعيين)</value>
+  </data>
+  <data name="DOWNSTREAM SAFETY (FALSE --&gt; RESET ENABLE)" xml:space="preserve">
+    <value>أمان المصب (خطأ -&gt; تمكين إعادة التعيين)</value>
+  </data>
+  <data name="MINIMUM OFF TIME OK FOR VALVE RESTART" xml:space="preserve">
+    <value>الحد الأدنى لوقت الإيقاف لا بأس به لإعادة تشغيل الصمام</value>
+  </data>
+  <data name="ON TIME ABOVE ZERO" xml:space="preserve">
+    <value>في الوقت المحدد فوق الصفر</value>
+  </data>
+  <data name="PAUSE TIME ENABLED" xml:space="preserve">
+    <value>تم تمكين وقت الإيقاف المؤقت</value>
+  </data>
+  <data name="NOT IN PAUSE PHASE" xml:space="preserve">
+    <value>ليس في مرحلة الإيقاف المؤقت</value>
+  </data>
+  <data name="COMMAND LINE" xml:space="preserve">
+    <value>سطر الأوامر</value>
+  </data>
+  <data name="COMMAND STAR" xml:space="preserve">
+    <value>نجمة القيادة</value>
+  </data>
+  <data name="COMMAND DELTA" xml:space="preserve">
+    <value>قيادة دلتا</value>
+  </data>
+  <data name="NO DECELERATION" xml:space="preserve">
+    <value>لا تباطؤ</value>
+  </data>
+  <data name="SPEED SETPOINT" xml:space="preserve">
+    <value>نقطة ضبط السرعة</value>
+  </data>
+  <data name="INVERTER STATUS" xml:space="preserve">
+    <value>حالة العاكس</value>
+  </data>
+  <data name="INVERTER RUNNING" xml:space="preserve">
+    <value>تشغيل العاكس</value>
+  </data>
+  <data name="SAFETY" xml:space="preserve">
+    <value>أمان</value>
+  </data>
+  <data name="INVERTER POWER UP" xml:space="preserve">
+    <value>قوة العاكس</value>
+  </data>
+  <data name="TEACH" xml:space="preserve">
+    <value>يعلم</value>
+  </data>
+  <data name="EMPTY" xml:space="preserve">
+    <value>فارغة</value>
+  </data>
+  <data name="MEASURE CONTROL" xml:space="preserve">
+    <value>قياس التحكم</value>
+  </data>
+  <data name="HOPPER LEVEL" xml:space="preserve">
+    <value>مستوى القادوس</value>
+  </data>
+  <data name="OK FOR PROCESS" xml:space="preserve">
+    <value>طيب للعملية</value>
+  </data>
+  <data name="GREASE MINIMUM LEVEL" xml:space="preserve">
+    <value>أدنى مستوى للشحوم</value>
+  </data>
+  <data name="PULL-CORD SAFETY" xml:space="preserve">
+    <value>أمان سحب الحبل</value>
+  </data>
+  <data name="COOLING OVERLOAD PROTECTION" xml:space="preserve">
+    <value>حماية التبريد الزائد</value>
+  </data>
+  <data name="MECHANICAL OVERLOAD (REACTION ARM)" xml:space="preserve">
+    <value>الزائد الميكانيكي (ذراع رد الفعل)</value>
+  </data>
+  <data name="COMMAND RUN" xml:space="preserve">
+    <value>تشغيل الأمر</value>
+  </data>
+  <data name="COOLING COMMAND ON" xml:space="preserve">
+    <value>أمر التبريد قيد التشغيل</value>
+  </data>
+  <data name="LOCAL SELECTOR" xml:space="preserve">
+    <value>المحدد المحلي</value>
+  </data>
+  <data name="LAMP GREEN" xml:space="preserve">
+    <value>المصباح الأخضر</value>
+  </data>
+  <data name="LAMP RED" xml:space="preserve">
+    <value>المصباح الأحمر</value>
+  </data>
+  <data name="LOCAL ENABLE SELECTOR" xml:space="preserve">
+    <value>محدد التمكين المحلي</value>
+  </data>
+  <data name="MAXIMUM LEVEL" xml:space="preserve">
+    <value>أعلى مستوى ممكن</value>
+  </data>
+  <data name="SEMIAUTO MODE" xml:space="preserve">
+    <value>الوضع شبه التلقائي</value>
+  </data>
+  <data name="SILO LEVEL" xml:space="preserve">
+    <value>مستوى الصومعة</value>
+  </data>
+  <data name="MATERIAL IN THE PROCESS" xml:space="preserve">
+    <value>المواد في العملية</value>
+  </data>
+  <data name="CLOSE" xml:space="preserve">
+    <value>يغلق</value>
+  </data>
+  <data name="POSITION" xml:space="preserve">
+    <value>موضع</value>
+  </data>
+  <data name="POSITION OPEN" xml:space="preserve">
+    <value>المركز مفتوح</value>
+  </data>
+  <data name="POSITION CLOSED" xml:space="preserve">
+    <value>الموقف مغلق</value>
+  </data>
+  <data name="COMMAND CLOSE" xml:space="preserve">
+    <value>أمر إغلاق</value>
+  </data>
+  <data name="OPPOSITE VALVE OK TO OPEN" xml:space="preserve">
+    <value>مقابل الصمام طيب لفتح</value>
+  </data>
+  <data name="VALVE FULLY CLOSED" xml:space="preserve">
+    <value>الصمام مغلق بالكامل</value>
+  </data>
+  <data name="CYLINDER PRESSURE AVAILABLE" xml:space="preserve">
+    <value>ضغط الاسطوانة متاح</value>
+  </data>
+  <data name="MINIMUM LEVEL OK FOR PUMPING" xml:space="preserve">
+    <value>الحد الأدنى لمستوى الضخ</value>
+  </data>
+  <data name="DOWNSTREAM DESTINATION OK/READY TO RECEIVE" xml:space="preserve">
+    <value>وجهة المصب جيدة / جاهزة للاستلام</value>
+  </data>
+  <data name="WEIGHT CONTROL" xml:space="preserve">
+    <value>التحكم في الوزن</value>
+  </data>
+  <data name="BOWL WEIGHT" xml:space="preserve">
+    <value>وزن الوعاء</value>
+  </data>
+  <data name="BOWL FILLING POSITION" xml:space="preserve">
+    <value>موقف ملء الوعاء</value>
+  </data>
+  <data name="ACS - DOSING CYCLE BY WEIGHT" xml:space="preserve">
+    <value>ACS - دورة الجرعات بالوزن</value>
+  </data>
+  <data name="ACS - DOSING CYCLE BY TIME" xml:space="preserve">
+    <value>ACS - دورة الجرعات حسب الوقت</value>
+  </data>
+  <data name="DOSING" xml:space="preserve">
+    <value>الجرعات</value>
+  </data>
+  <data name="TARGETS" xml:space="preserve">
+    <value>الأهداف</value>
+  </data>
+  <data name="BOWL IN FILLING POSITION" xml:space="preserve">
+    <value>الوعاء في وضع التعبئة</value>
+  </data>
+  <data name="WASHING TANK BELOW MAXIMUM LEVEL" xml:space="preserve">
+    <value>خزان الغسيل أقل من المستوى الأقصى</value>
+  </data>
+  <data name="WASHING TEMPERATURE OVER MINIMUM TEMPERATURE" xml:space="preserve">
+    <value>درجة حرارة الغسيل فوق الحد الأدنى من درجة الحرارة</value>
+  </data>
+  <data name="WEIGHT SENSOR OK" xml:space="preserve">
+    <value>مستشعر الوزن طيب</value>
+  </data>
+  <data name="CAUSTIC VALVE READY" xml:space="preserve">
+    <value>صمام الكاوية جاهز</value>
+  </data>
+  <data name="DETERGENT VALVE READY" xml:space="preserve">
+    <value>صمام المنظفات جاهز</value>
+  </data>
+  <data name="WATER VALVE READY" xml:space="preserve">
+    <value>صمام المياه جاهز</value>
+  </data>
+  <data name="DOSING CYCLE OFF" xml:space="preserve">
+    <value>دورة الجرعات معطلة</value>
+  </data>
+  <data name="WATER EXCHANGE" xml:space="preserve">
+    <value>تبادل المياه</value>
+  </data>
+  <data name="HOLDING TANK LEVEL" xml:space="preserve">
+    <value>عقد مستوى الخزان</value>
+  </data>
+  <data name="ACTUAL FLOWRATE" xml:space="preserve">
+    <value>معدل التدفق الفعلي</value>
+  </data>
+  <data name="TOTALIZED" xml:space="preserve">
+    <value>مجموع</value>
+  </data>
+  <data name="FLOWRATE TOTALIZED PULSE" xml:space="preserve">
+    <value>معدل تدفق النبض الكلي</value>
+  </data>
+  <data name="REFILL" xml:space="preserve">
+    <value>اعادة تعبئه</value>
+  </data>
+  <data name="ACTUAL PRESSURE" xml:space="preserve">
+    <value>الضغط الفعلي</value>
+  </data>
+  <data name="WATER PRESSURE" xml:space="preserve">
+    <value>ضغط المياه</value>
+  </data>
+  <data name="HEAT EXCHANGER TEMPERATURE" xml:space="preserve">
+    <value>درجة حرارة المبادل الحراري</value>
+  </data>
+  <data name="ACTUAL POSITION" xml:space="preserve">
+    <value>الوضع الفعلي</value>
+  </data>
+  <data name="THERMOREGULATION" xml:space="preserve">
+    <value>التنظيم الحراري</value>
+  </data>
+  <data name="MODULATION CONTROL" xml:space="preserve">
+    <value>التحكم في التعديل</value>
+  </data>
+  <data name="VALVE OPEN SETPOINT" xml:space="preserve">
+    <value>صمام فتح نقطة الضبط</value>
+  </data>
+  <data name="WATER PUMP FULL RUNNING" xml:space="preserve">
+    <value>مضخة مياه تعمل بكامل طاقتها</value>
+  </data>
+  <data name="INLET WATER PRESSURE" xml:space="preserve">
+    <value>ضغط الماء الداخل</value>
+  </data>
+  <data name="DIGITAL INPUTS PROTECTION" xml:space="preserve">
+    <value>حماية المدخلات الرقمية</value>
+  </data>
+  <data name="DIGITAL OUTPUTS PROTECTION" xml:space="preserve">
+    <value>حماية المخرجات الرقمية</value>
+  </data>
+  <data name="INTERNAL DEVICES PROTECTION" xml:space="preserve">
+    <value>حماية الأجهزة الداخلية</value>
+  </data>
+  <data name="EXTERNAL DEVICES PROTECTION" xml:space="preserve">
+    <value>حماية الأجهزة الخارجية</value>
+  </data>
+  <data name="BEACON PROTECTION" xml:space="preserve">
+    <value>حماية منارة</value>
+  </data>
+  <data name="MASTER ESTOP" xml:space="preserve">
+    <value>سيد Estop</value>
+  </data>
+  <data name="ETHERNET SWITCH" xml:space="preserve">
+    <value>تبديل اثرنت</value>
+  </data>
+  <data name="SIREN" xml:space="preserve">
+    <value>صفارة إنذار</value>
+  </data>
+  <data name="EXTERNAL SIREN" xml:space="preserve">
+    <value>صفارة الإنذار الخارجية</value>
+  </data>
+  <data name="CRITICAL FAULT IN THE ELECTRICAL CABINET" xml:space="preserve">
+    <value>عطل فادح في الخزانة الكهربائي</value>
+  </data>
 </root>
