--- a/Prevu.Localization/Properties/Resources.de.resx
+++ b/Prevu.Localization/Properties/Resources.de.resx
@@ -1041,4 +1041,379 @@
   <data name="INFO_OVL_2" xml:space="preserve">
     <value>Überprüfen Sie die Maschine, reinigen Sie ihn, wenn Sie gestaut werden. Warten Sie 3 Minuten! - Setzen Sie das Überlastrelais in das Schaltschrank zurück</value>
   </data>
+  <data name="DETAILS" xml:space="preserve">
+    <value>Einzelheiten</value>
+  </data>
+  <data name="CREATE NEW USER GROUP" xml:space="preserve">
+    <value>Neue Benutzergruppe erstellen</value>
+  </data>
+  <data name="PASSWORD" xml:space="preserve">
+    <value>Passwort</value>
+  </data>
+  <data name="SAVE ALL" xml:space="preserve">
+    <value>Rette alle</value>
+  </data>
+  <data name="ELECTRICAL DRAWING" xml:space="preserve">
+    <value>Elektronische Zeichnung</value>
+  </data>
+  <data name="LOADING" xml:space="preserve">
+    <value>Wird geladen</value>
+  </data>
+  <data name="PROGRESS" xml:space="preserve">
+    <value>Progress</value>
+  </data>
+  <data name="WEIGHT" xml:space="preserve">
+    <value>Gewicht</value>
+  </data>
+  <data name="FLOWRATE" xml:space="preserve">
+    <value>Fließrate</value>
+  </data>
+  <data name="REFERENCE" xml:space="preserve">
+    <value>Referenz</value>
+  </data>
+  <data name="PRESSURE" xml:space="preserve">
+    <value>Druck</value>
+  </data>
+  <data name="EVENT PAGE" xml:space="preserve">
+    <value>Ereignisseite</value>
+  </data>
+  <data name="CRITICAL ALARM!" xml:space="preserve">
+    <value>Kritischer Alarm!</value>
+  </data>
+  <data name="CRITICAL FAULT PRESENT" xml:space="preserve">
+    <value>Kritischer Fehler vorhanden</value>
+  </data>
+  <data name="FULL RANGE ADJUST" xml:space="preserve">
+    <value>Vollbereichsanpassung</value>
+  </data>
+  <data name="MOTOR CURRENT" xml:space="preserve">
+    <value>Motorstrom</value>
+  </data>
+  <data name="SENSOR ID" xml:space="preserve">
+    <value>Sensor-ID</value>
+  </data>
+  <data name="ELECTRICAL ID" xml:space="preserve">
+    <value>Elektrische ID</value>
+  </data>
+  <data name="OK STATUS" xml:space="preserve">
+    <value>Ok-Status</value>
+  </data>
+  <data name="EL. DRAWING" xml:space="preserve">
+    <value>El. Zeichnung</value>
+  </data>
+  <data name="MOTOR TEMPERATURE" xml:space="preserve">
+    <value>Motortemperatur</value>
+  </data>
+  <data name="OVERLOAD PROTECTION" xml:space="preserve">
+    <value>Überspannungschutz</value>
+  </data>
+  <data name="COMMAND ON" xml:space="preserve">
+    <value>Befehl EIN</value>
+  </data>
+  <data name="NO CRITICAL FAULT" xml:space="preserve">
+    <value>Kein kritischer Fehler</value>
+  </data>
+  <data name="NO MINOR FAULT" xml:space="preserve">
+    <value>Kein kleiner Fehler</value>
+  </data>
+  <data name="LOCAL DISCONNECT" xml:space="preserve">
+    <value>Lokale Trennung</value>
+  </data>
+  <data name="COMPONENT ENABLED" xml:space="preserve">
+    <value>Komponente aktiviert</value>
+  </data>
+  <data name="RUN AUTO INTERLOCKS" xml:space="preserve">
+    <value>Automatische Verriegelungen ausführen</value>
+  </data>
+  <data name="START AUTO INTERLOCKS" xml:space="preserve">
+    <value>Automatische Verriegelungen starten</value>
+  </data>
+  <data name="NO-STOP AUTO INTERLOCKS" xml:space="preserve">
+    <value>Automatische Verriegelungen – kein Stopp</value>
+  </data>
+  <data name="OVERLOAD MINIMUM TIME EXPIRED" xml:space="preserve">
+    <value>Überlast Mindesttemperatur abgelaufen</value>
+  </data>
+  <data name="UPSTREAM SAFETY" xml:space="preserve">
+    <value>Upstream-Sicherheit</value>
+  </data>
+  <data name="DOWNSTREAM SAFETY" xml:space="preserve">
+    <value>Nachgelagerte Sicherheit</value>
+  </data>
+  <data name="MINIMUM RESTART TIME" xml:space="preserve">
+    <value>Minimale Neustartzeit</value>
+  </data>
+  <data name="CURRENT OK FOR MATERIAL" xml:space="preserve">
+    <value>Strom OK für Material</value>
+  </data>
+  <data name="PLC CONNECTION LOST!" xml:space="preserve">
+    <value>SPS-Verbindung unterbrochen!</value>
+  </data>
+  <data name="SERVER CONNECTION LOST!" xml:space="preserve">
+    <value>Serververbindung verloren!</value>
+  </data>
+  <data name="PLC SIMULATION" xml:space="preserve">
+    <value>SPS-Simulation</value>
+  </data>
+  <data name="TIME CYCLE" xml:space="preserve">
+    <value>Zeitzyklus</value>
+  </data>
+  <data name="COMMAND OPEN" xml:space="preserve">
+    <value>Befehl Öffnen</value>
+  </data>
+  <data name="UPSTREAM SAFETY (FALSE --&gt; RESET ENABLE)" xml:space="preserve">
+    <value>Upstream-Sicherheit (False --&gt; Reset Enable)</value>
+  </data>
+  <data name="DOWNSTREAM SAFETY (FALSE --&gt; RESET ENABLE)" xml:space="preserve">
+    <value>Downstream-Sicherheit (False --&gt; Reset Enable)</value>
+  </data>
+  <data name="MINIMUM OFF TIME OK FOR VALVE RESTART" xml:space="preserve">
+    <value>Minimale Ausschaltzeit OK für Ventilneustart</value>
+  </data>
+  <data name="ON TIME ABOVE ZERO" xml:space="preserve">
+    <value>Pünktlich über Null</value>
+  </data>
+  <data name="PAUSE TIME ENABLED" xml:space="preserve">
+    <value>Pausenzeit aktiviert</value>
+  </data>
+  <data name="NOT IN PAUSE PHASE" xml:space="preserve">
+    <value>Nicht in der Pausenphase</value>
+  </data>
+  <data name="COMMAND LINE" xml:space="preserve">
+    <value>Befehlszeile</value>
+  </data>
+  <data name="COMMAND STAR" xml:space="preserve">
+    <value>Befehlsstern</value>
+  </data>
+  <data name="COMMAND DELTA" xml:space="preserve">
+    <value>Kommando-Delta</value>
+  </data>
+  <data name="NO DECELERATION" xml:space="preserve">
+    <value>Keine Verzögerung</value>
+  </data>
+  <data name="SPEED SETPOINT" xml:space="preserve">
+    <value>Geschwindigkeitssollwert</value>
+  </data>
+  <data name="INVERTER STATUS" xml:space="preserve">
+    <value>Wechselrichterstatus</value>
+  </data>
+  <data name="INVERTER RUNNING" xml:space="preserve">
+    <value>Wechselrichter läuft</value>
+  </data>
+  <data name="SAFETY" xml:space="preserve">
+    <value>Sicherheit</value>
+  </data>
+  <data name="INVERTER POWER UP" xml:space="preserve">
+    <value>Einschalten des Wechselrichters</value>
+  </data>
+  <data name="TEACH" xml:space="preserve">
+    <value>Unterrichten</value>
+  </data>
+  <data name="EMPTY" xml:space="preserve">
+    <value>Leer</value>
+  </data>
+  <data name="MEASURE CONTROL" xml:space="preserve">
+    <value>Kontrolle messen</value>
+  </data>
+  <data name="HOPPER LEVEL" xml:space="preserve">
+    <value>Hopper-Ebene</value>
+  </data>
+  <data name="OK FOR PROCESS" xml:space="preserve">
+    <value>Ok für den Prozess</value>
+  </data>
+  <data name="_OK_FOR_PROCESS" xml:space="preserve">
+    <value>Ok für den Prozess</value>
+  </data>
+  <data name="GREASE MINIMUM LEVEL" xml:space="preserve">
+    <value>Fett-Mindestfüllstand</value>
+  </data>
+  <data name="PULL-CORD SAFETY" xml:space="preserve">
+    <value>Zugschnur-Sicherheit</value>
+  </data>
+  <data name="COOLING OVERLOAD PROTECTION" xml:space="preserve">
+    <value>Kühlüberlastschutz</value>
+  </data>
+  <data name="MECHANICAL OVERLOAD (REACTION ARM)" xml:space="preserve">
+    <value>Mechanische Überlastung (Reaktionsarm)</value>
+  </data>
+  <data name="COMMAND RUN" xml:space="preserve">
+    <value>Befehl ausführen</value>
+  </data>
+  <data name="COOLING COMMAND ON" xml:space="preserve">
+    <value>Kühlbefehl Ein</value>
+  </data>
+  <data name="LOCAL SELECTOR" xml:space="preserve">
+    <value>Lokaler Selektor</value>
+  </data>
+  <data name="LAMP GREEN" xml:space="preserve">
+    <value>Lampengrün</value>
+  </data>
+  <data name="LAMP RED" xml:space="preserve">
+    <value>Lampe Rot</value>
+  </data>
+  <data name="LOCAL ENABLE SELECTOR" xml:space="preserve">
+    <value>Lokaler Aktivierungsselektor</value>
+  </data>
+  <data name="MAXIMUM LEVEL" xml:space="preserve">
+    <value>Maximales Level</value>
+  </data>
+  <data name="SEMIAUTO MODE" xml:space="preserve">
+    <value>Halbautomatischer Modus</value>
+  </data>
+  <data name="SILO LEVEL" xml:space="preserve">
+    <value>Silo-Ebene</value>
+  </data>
+  <data name="MATERIAL IN THE PROCESS" xml:space="preserve">
+    <value>Material im Prozess</value>
+  </data>
+  <data name="CLOSE" xml:space="preserve">
+    <value>Nah dran</value>
+  </data>
+  <data name="POSITION" xml:space="preserve">
+    <value>Position</value>
+  </data>
+  <data name="POSITION OPEN" xml:space="preserve">
+    <value>Stelle offen</value>
+  </data>
+  <data name="POSITION CLOSED" xml:space="preserve">
+    <value>Position geschlossen</value>
+  </data>
+  <data name="COMMAND CLOSE" xml:space="preserve">
+    <value>Befehl Schließen</value>
+  </data>
+  <data name="OPPOSITE VALVE OK TO OPEN" xml:space="preserve">
+    <value>Gegenüberliegendes Ventil OK zum Öffnen</value>
+  </data>
+  <data name="VALVE FULLY CLOSED" xml:space="preserve">
+    <value>Ventil vollständig geschlossen</value>
+  </data>
+  <data name="CYLINDER PRESSURE AVAILABLE" xml:space="preserve">
+    <value>Flaschendruck verfügbar</value>
+  </data>
+  <data name="MINIMUM LEVEL OK FOR PUMPING" xml:space="preserve">
+    <value>Mindestfüllstand OK zum Pumpen</value>
+  </data>
+  <data name="DOWNSTREAM DESTINATION OK/READY TO RECEIVE" xml:space="preserve">
+    <value>Downstream-Ziel OK/Empfangsbereit</value>
+  </data>
+  <data name="WEIGHT CONTROL" xml:space="preserve">
+    <value>Gewichtskontrolle</value>
+  </data>
+  <data name="BOWL WEIGHT" xml:space="preserve">
+    <value>Schüsselgewicht</value>
+  </data>
+  <data name="BOWL FILLING POSITION" xml:space="preserve">
+    <value>Schüsselfüllposition</value>
+  </data>
+  <data name="ACS - DOSING CYCLE BY WEIGHT" xml:space="preserve">
+    <value>ACS - Dosierzyklus nach Gewicht</value>
+  </data>
+  <data name="ACS - DOSING CYCLE BY TIME" xml:space="preserve">
+    <value>ACS - Dosierzyklus nach Zeit</value>
+  </data>
+  <data name="DOSING" xml:space="preserve">
+    <value>Dosierung</value>
+  </data>
+  <data name="TARGETS" xml:space="preserve">
+    <value>Ziele</value>
+  </data>
+  <data name="BOWL IN FILLING POSITION" xml:space="preserve">
+    <value>Schüssel in Füllposition</value>
+  </data>
+  <data name="WASHING TANK BELOW MAXIMUM LEVEL" xml:space="preserve">
+    <value>Waschtank unter Höchststand</value>
+  </data>
+  <data name="WASHING TEMPERATURE OVER MINIMUM TEMPERATURE" xml:space="preserve">
+    <value>Waschtemperatur über Mindesttemperatur</value>
+  </data>
+  <data name="WEIGHT SENSOR OK" xml:space="preserve">
+    <value>Gewichtssensor Ok</value>
+  </data>
+  <data name="CAUSTIC VALVE READY" xml:space="preserve">
+    <value>Ätzventil bereit</value>
+  </data>
+  <data name="DETERGENT VALVE READY" xml:space="preserve">
+    <value>Reinigungsmittelventil bereit</value>
+  </data>
+  <data name="WATER VALVE READY" xml:space="preserve">
+    <value>Wasserventil bereit</value>
+  </data>
+  <data name="DOSING CYCLE OFF" xml:space="preserve">
+    <value>Dosierzyklus aus</value>
+  </data>
+  <data name="WATER EXCHANGE" xml:space="preserve">
+    <value>Wasseraustausch</value>
+  </data>
+  <data name="HOLDING TANK LEVEL" xml:space="preserve">
+    <value>Tankfüllstand halten</value>
+  </data>
+  <data name="ACTUAL FLOWRATE" xml:space="preserve">
+    <value>Tatsächliche Durchflussrate</value>
+  </data>
+  <data name="TOTALIZED" xml:space="preserve">
+    <value>Totalisiert</value>
+  </data>
+  <data name="FLOWRATE TOTALIZED PULSE" xml:space="preserve">
+    <value>Gesamtpuls der Durchflussrate</value>
+  </data>
+  <data name="REFILL" xml:space="preserve">
+    <value>Nachfüllung</value>
+  </data>
+  <data name="ACTUAL PRESSURE" xml:space="preserve">
+    <value>Tatsächlicher Druck</value>
+  </data>
+  <data name="WATER PRESSURE" xml:space="preserve">
+    <value>Wasserdruck</value>
+  </data>
+  <data name="HEAT EXCHANGER TEMPERATURE" xml:space="preserve">
+    <value>Wärmetauschertemperatur</value>
+  </data>
+  <data name="ACTUAL POSITION" xml:space="preserve">
+    <value>Aktuelle Position</value>
+  </data>
+  <data name="THERMOREGULATION" xml:space="preserve">
+    <value>Thermoregulierung</value>
+  </data>
+  <data name="MODULATION CONTROL" xml:space="preserve">
+    <value>Modulationssteuerung</value>
+  </data>
+  <data name="VALVE OPEN SETPOINT" xml:space="preserve">
+    <value>Ventilöffnungssollwert</value>
+  </data>
+  <data name="WATER PUMP FULL RUNNING" xml:space="preserve">
+    <value>Wasserpumpe läuft voll</value>
+  </data>
+  <data name="INLET WATER PRESSURE" xml:space="preserve">
+    <value>Einlasswasserdruck</value>
+  </data>
+  <data name="DIGITAL INPUTS PROTECTION" xml:space="preserve">
+    <value>Schutz der digitalen Eingänge</value>
+  </data>
+  <data name="DIGITAL OUTPUTS PROTECTION" xml:space="preserve">
+    <value>Schutz der digitalen Ausgänge</value>
+  </data>
+  <data name="INTERNAL DEVICES PROTECTION" xml:space="preserve">
+    <value>Interner Geräteschutz</value>
+  </data>
+  <data name="EXTERNAL DEVICES PROTECTION" xml:space="preserve">
+    <value>Schutz für externe Geräte</value>
+  </data>
+  <data name="BEACON PROTECTION" xml:space="preserve">
+    <value>Beacon-Schutz</value>
+  </data>
+  <data name="MASTER ESTOP" xml:space="preserve">
+    <value>Meister Estop</value>
+  </data>
+  <data name="ETHERNET SWITCH" xml:space="preserve">
+    <value>Ethernet-Switch</value>
+  </data>
+  <data name="SIREN" xml:space="preserve">
+    <value>Sirene</value>
+  </data>
+  <data name="EXTERNAL SIREN" xml:space="preserve">
+    <value>Externe Sirene</value>
+  </data>
+  <data name="CRITICAL FAULT IN THE ELECTRICAL CABINET" xml:space="preserve">
+    <value>Kritischer Fehler im Schaltschrank</value>
+  </data>
 </root>
