--- a/Prevu.Localization/Properties/Resources.it.resx
+++ b/Prevu.Localization/Properties/Resources.it.resx
@@ -558,4 +558,442 @@
   <data name="DATA" xml:space="preserve">
     <value>Dati</value>
   </data>
+  <data name="AUTOMATIC MODE" xml:space="preserve">
+    <value>Modalità Automatica</value>
+  </data>
+  <data name="COMMAND ON" xml:space="preserve">
+    <value>Comando di Accensione</value>
+  </data>
+  <data name="COMPONENT ENABLED" xml:space="preserve">
+    <value>Componente Abilitato</value>
+  </data>
+  <data name="CREATE NEW USER GROUP" xml:space="preserve">
+    <value>Crea un Nuovo Gruppo Utente</value>
+  </data>
+  <data name="CRITICAL ALARM!" xml:space="preserve">
+    <value>Allarme Critico!</value>
+  </data>
+  <data name="CRITICAL FAULT PRESENT" xml:space="preserve">
+    <value>Guasto Critico Presente</value>
+  </data>
+  <data name="CURRENT OK FOR MATERIAL" xml:space="preserve">
+    <value>Corrente OK per materiale</value>
+  </data>
+  <data name="DETAILS" xml:space="preserve">
+    <value>Dettagli</value>
+  </data>
+  <data name="DISABLED MODE" xml:space="preserve">
+    <value>Modalità Disabilitata</value>
+  </data>
+  <data name="DOWNSTREAM SAFETY" xml:space="preserve">
+    <value>Sicurezza a Valle</value>
+  </data>
+  <data name="EL. DRAWING" xml:space="preserve">
+    <value>Schema Elet</value>
+  </data>
+  <data name="ELECTRICAL DRAWING" xml:space="preserve">
+    <value>Schema Elettrico</value>
+  </data>
+  <data name="ELECTRICAL ID" xml:space="preserve">
+    <value>ID Elettrico</value>
+  </data>
+  <data name="ESTOP NOT OK" xml:space="preserve">
+    <value>E-Stop non OK</value>
+  </data>
+  <data name="ESTOP OK" xml:space="preserve">
+    <value>E-Stop OK</value>
+  </data>
+  <data name="EVENT PAGE" xml:space="preserve">
+    <value>Pagina Eventi</value>
+  </data>
+  <data name="FLOWRATE" xml:space="preserve">
+    <value>Portata</value>
+  </data>
+  <data name="FULL RANGE ADJUST" xml:space="preserve">
+    <value>Regolazione dell'Intero Intervallo</value>
+  </data>
+  <data name="INTERLOCKS" xml:space="preserve">
+    <value>Interblocchi</value>
+  </data>
+  <data name="LOADING" xml:space="preserve">
+    <value>Caricamento</value>
+  </data>
+  <data name="LOCAL DISCONNECT" xml:space="preserve">
+    <value>Sezionatore Locale</value>
+  </data>
+  <data name="LOCK" xml:space="preserve">
+    <value>Blocca</value>
+  </data>
+  <data name="MAINTENANCE MODE" xml:space="preserve">
+    <value>Modalità Manutenzione</value>
+  </data>
+  <data name="MINIMUM RESTART TIME" xml:space="preserve">
+    <value>Minimo Tempo di Riavvio</value>
+  </data>
+  <data name="MISSING SYNOPTIC" xml:space="preserve">
+    <value>Sinottico Mancante</value>
+  </data>
+  <data name="MOTOR CURRENT" xml:space="preserve">
+    <value>Corrente Motore</value>
+  </data>
+  <data name="MOTOR TEMPERATURE" xml:space="preserve">
+    <value>Temperatura Motore</value>
+  </data>
+  <data name="NO CRITICAL FAULT" xml:space="preserve">
+    <value>Nessun Guasto Critico</value>
+  </data>
+  <data name="NO MINOR FAULT" xml:space="preserve">
+    <value>Nessun Guasto Secondario</value>
+  </data>
+  <data name="NO-STOP AUTO INTERLOCKS" xml:space="preserve">
+    <value>Interblocchi Automatici - No Stop</value>
+  </data>
+  <data name="NOW" xml:space="preserve">
+    <value>Ora</value>
+  </data>
+  <data name="OK STATUS" xml:space="preserve">
+    <value>Stato Ok</value>
+  </data>
+  <data name="OPEN" xml:space="preserve">
+    <value>Aperto</value>
+  </data>
+  <data name="OVERLOAD MINIMUM TIME EXPIRED" xml:space="preserve">
+    <value>Sovraccarico Temperature Minima Scaduto</value>
+  </data>
+  <data name="OVERLOAD PROTECTION" xml:space="preserve">
+    <value>Protezione Sovraccarico</value>
+  </data>
+  <data name="PASSWORD" xml:space="preserve">
+    <value>Password</value>
+  </data>
+  <data name="PLANT VIEW" xml:space="preserve">
+    <value>Vista Impianto</value>
+  </data>
+  <data name="PLC CONNECTION LOST!" xml:space="preserve">
+    <value>Connessione PLC Persa!</value>
+  </data>
+  <data name="PLC SIMULATION" xml:space="preserve">
+    <value>Simulazione PLC</value>
+  </data>
+  <data name="PRESSURE" xml:space="preserve">
+    <value>Pressione</value>
+  </data>
+  <data name="PRODUCTION CYCLE" xml:space="preserve">
+    <value>Ciclo Produzione</value>
+  </data>
+  <data name="PROGRESS" xml:space="preserve">
+    <value>Progresso</value>
+  </data>
+  <data name="REFERENCE" xml:space="preserve">
+    <value>Riferimento</value>
+  </data>
+  <data name="RELEASE" xml:space="preserve">
+    <value>Rilascio</value>
+  </data>
+  <data name="RUN AUTO INTERLOCKS" xml:space="preserve">
+    <value>Eseguire Interblocchi Automatici</value>
+  </data>
+  <data name="SAVE ALL" xml:space="preserve">
+    <value>Salva Tutti</value>
+  </data>
+  <data name="SENSOR ID" xml:space="preserve">
+    <value>ID Sensore</value>
+  </data>
+  <data name="SERVER CONNECTION LOST!" xml:space="preserve">
+    <value>Connessione al Server Persa!</value>
+  </data>
+  <data name="START AUTO INTERLOCKS" xml:space="preserve">
+    <value>Avvio Interblocchi Automatici</value>
+  </data>
+  <data name="STOP CYCLE ON" xml:space="preserve">
+    <value>Ciclo di Stop Avviato</value>
+  </data>
+  <data name="STOP CYCLE PENDING" xml:space="preserve">
+    <value>Ciclo di Stop in Attesa</value>
+  </data>
+  <data name="TREND PAGE" xml:space="preserve">
+    <value>Pagina Trend</value>
+  </data>
+  <data name="UPSTREAM SAFETY" xml:space="preserve">
+    <value>Sicurezza a Monte</value>
+  </data>
+  <data name="WEIGHT" xml:space="preserve">
+    <value>Peso</value>
+  </data>
+  <data name="ZONE PREPARED" xml:space="preserve">
+    <value>Zona Preparata</value>
+  </data>
+  <data name="_OK_FOR_PROCESS" xml:space="preserve">
+    <value>Ok Per il Processo</value>
+  </data>
+  <data name="COMMAND DELTA" xml:space="preserve">
+    <value>Comando Delta</value>
+  </data>
+  <data name="COMMAND LINE" xml:space="preserve">
+    <value>Comando Linea</value>
+  </data>
+  <data name="COMMAND OPEN" xml:space="preserve">
+    <value>Comando di Apertura</value>
+  </data>
+  <data name="COMMAND STAR" xml:space="preserve">
+    <value>Comando Stella</value>
+  </data>
+  <data name="DOWNSTREAM SAFETY (FALSE --&gt; RESET ENABLE)" xml:space="preserve">
+    <value>Sicurezza a Valle (Falso --&gt; Ripristina Abilitazione)</value>
+  </data>
+  <data name="UPSTREAM SAFETY (FALSE --&gt; RESET ENABLE)" xml:space="preserve">
+    <value>Sicurezza a Monte (Falso --&gt; Ripristina Abilitazione)</value>
+  </data>
+  <data name="EMPTY" xml:space="preserve">
+    <value>Vuoto</value>
+  </data>
+  <data name="HOPPER LEVEL" xml:space="preserve">
+    <value>Livello Tramoggia</value>
+  </data>
+  <data name="INVERTER POWER UP" xml:space="preserve">
+    <value>Accensione dell'Inverter</value>
+  </data>
+  <data name="INVERTER RUNNING" xml:space="preserve">
+    <value>Inverter in Funzione</value>
+  </data>
+  <data name="INVERTER STATUS" xml:space="preserve">
+    <value>Stato dell'Inverter</value>
+  </data>
+  <data name="MEASURE CONTROL" xml:space="preserve">
+    <value>Controllo Misurazione</value>
+  </data>
+  <data name="MINIMUM OFF TIME OK FOR VALVE RESTART" xml:space="preserve">
+    <value>Tempo Minimo di Spegnimento Ok per il Riavvio della Valvola</value>
+  </data>
+  <data name="NO DECELERATION" xml:space="preserve">
+    <value>Nessuna Decelerazione</value>
+  </data>
+  <data name="NOT IN PAUSE PHASE" xml:space="preserve">
+    <value>Non in Fase di Pausa</value>
+  </data>
+  <data name="OK FOR PROCESS" xml:space="preserve">
+    <value>Ok per il Processo</value>
+  </data>
+  <data name="ON TIME ABOVE ZERO" xml:space="preserve">
+    <value>Tempo Accensione Sopra lo Zero</value>
+  </data>
+  <data name="PAUSE TIME ENABLED" xml:space="preserve">
+    <value>Tempo Pausa Abilitato</value>
+  </data>
+  <data name="SAFETY" xml:space="preserve">
+    <value>Sicurezza</value>
+  </data>
+  <data name="SPEED SETPOINT" xml:space="preserve">
+    <value>Setpoint di Velocità</value>
+  </data>
+  <data name="TEACH" xml:space="preserve">
+    <value>Apprendimento</value>
+  </data>
+  <data name="TIME CYCLE" xml:space="preserve">
+    <value>Tempo Ciclo</value>
+  </data>
+  <data name="GREASE MINIMUM LEVEL" xml:space="preserve">
+    <value>Livello Minimo Di Grasso</value>
+  </data>
+  <data name="PULL-CORD SAFETY" xml:space="preserve">
+    <value>Finecorsa A Strappo</value>
+  </data>
+  <data name="COOLING OVERLOAD PROTECTION" xml:space="preserve">
+    <value>Protezione Sistema Di Raffreddamento</value>
+  </data>
+  <data name="MECHANICAL OVERLOAD (REACTION ARM)" xml:space="preserve">
+    <value>Sovraccarico Meccanico (Braccio Di Reazione)</value>
+  </data>
+  <data name="COMMAND RUN" xml:space="preserve">
+    <value>Comando Di Marcia</value>
+  </data>
+  <data name="COOLING COMMAND ON" xml:space="preserve">
+    <value>Comando Di Raffreddamento Attivato</value>
+  </data>
+  <data name="LOCAL SELECTOR" xml:space="preserve">
+    <value>Selettore Locale</value>
+  </data>
+  <data name="LAMP GREEN" xml:space="preserve">
+    <value>Lampada Verde</value>
+  </data>
+  <data name="LAMP RED" xml:space="preserve">
+    <value>Lampada Rossa</value>
+  </data>
+  <data name="LOCAL ENABLE SELECTOR" xml:space="preserve">
+    <value>Selettore Di Abilitazione Locale</value>
+  </data>
+  <data name="MAXIMUM LEVEL" xml:space="preserve">
+    <value>Livello Massimo</value>
+  </data>
+  <data name="SEMIAUTO MODE" xml:space="preserve">
+    <value>Modalità Semiautomatica</value>
+  </data>
+  <data name="SILO LEVEL" xml:space="preserve">
+    <value>Livello Del Silo</value>
+  </data>
+  <data name="MATERIAL IN THE PROCESS" xml:space="preserve">
+    <value>Materiale In Lavorazione</value>
+  </data>
+  <data name="CLOSE" xml:space="preserve">
+    <value>Chiudi</value>
+  </data>
+  <data name="POSITION" xml:space="preserve">
+    <value>Posizione</value>
+  </data>
+  <data name="POSITION OPEN" xml:space="preserve">
+    <value>Posizione Aperta</value>
+  </data>
+  <data name="POSITION CLOSED" xml:space="preserve">
+    <value>Posizione Chiusa</value>
+  </data>
+  <data name="COMMAND CLOSE" xml:space="preserve">
+    <value>Comando Chiudi</value>
+  </data>
+  <data name="OPPOSITE VALVE OK TO OPEN" xml:space="preserve">
+    <value>Valvola Opposta Ok Per Aprire</value>
+  </data>
+  <data name="VALVE FULLY CLOSED" xml:space="preserve">
+    <value>Valvola Completamente Chiusa</value>
+  </data>
+  <data name="CYLINDER PRESSURE AVAILABLE" xml:space="preserve">
+    <value>Pressione Del Cilindro Disponibile</value>
+  </data>
+  <data name="MINIMUM LEVEL OK FOR PUMPING" xml:space="preserve">
+    <value>Livello Minimo Ok Per Il Pompaggio</value>
+  </data>
+  <data name="DOWNSTREAM DESTINATION OK/READY TO RECEIVE" xml:space="preserve">
+    <value>Destinazione A Valle Ok/Pronta Per La Ricezione</value>
+  </data>
+  <data name="WEIGHT CONTROL" xml:space="preserve">
+    <value>Controllo Del Peso</value>
+  </data>
+  <data name="BOWL WEIGHT" xml:space="preserve">
+    <value>Peso Della Vaschetta</value>
+  </data>
+  <data name="BOWL FILLING POSITION" xml:space="preserve">
+    <value>Posizione Di Riempimento Della Vaschetta</value>
+  </data>
+  <data name="ACS - DOSING CYCLE BY WEIGHT" xml:space="preserve">
+    <value>ACS - Ciclo Di Dosaggio In Base Al Peso</value>
+  </data>
+  <data name="ACS - DOSING CYCLE BY TIME" xml:space="preserve">
+    <value>ACS - Ciclo Di Dosaggio In Base Al Tempo</value>
+  </data>
+  <data name="DOSING" xml:space="preserve">
+    <value>Dosaggio</value>
+  </data>
+  <data name="TARGETS" xml:space="preserve">
+    <value>Obiettivi</value>
+  </data>
+  <data name="BOWL IN FILLING POSITION" xml:space="preserve">
+    <value>Vaschetta In Posizione Di Riempimento</value>
+  </data>
+  <data name="WASHING TANK BELOW MAXIMUM LEVEL" xml:space="preserve">
+    <value>Vasca Di Lavaggio Sotto Il Livello Massimo</value>
+  </data>
+  <data name="WASHING TEMPERATURE OVER MINIMUM TEMPERATURE" xml:space="preserve">
+    <value>Temperatura Di Lavaggio Oltre La Temperatura Minima</value>
+  </data>
+  <data name="WEIGHT SENSOR OK" xml:space="preserve">
+    <value>Sensore Di Peso Ok</value>
+  </data>
+  <data name="CAUSTIC VALVE READY" xml:space="preserve">
+    <value>Valvola Caustica Pronta</value>
+  </data>
+  <data name="DETERGENT VALVE READY" xml:space="preserve">
+    <value>Valvola Detergente Pronta</value>
+  </data>
+  <data name="WATER VALVE READY" xml:space="preserve">
+    <value>Valvola Dell'Acqua Pronta</value>
+  </data>
+  <data name="DOSING CYCLE OFF" xml:space="preserve">
+    <value>Ciclo Di Dosaggio Disattivato</value>
+  </data>
+  <data name="WATER EXCHANGE" xml:space="preserve">
+    <value>Scambio D'Acqua</value>
+  </data>
+  <data name="HOLDING TANK LEVEL" xml:space="preserve">
+    <value>Livello Del Vasca Di Raccolta</value>
+  </data>
+  <data name="ACTUAL FLOWRATE" xml:space="preserve">
+    <value>Portata Effettiva</value>
+  </data>
+  <data name="TOTALIZED" xml:space="preserve">
+    <value>Totalizzato</value>
+  </data>
+  <data name="FLOWRATE TOTALIZED PULSE" xml:space="preserve">
+    <value>Impulso Totalizzato Portata</value>
+  </data>
+  <data name="REFILL" xml:space="preserve">
+    <value>Ricarica</value>
+  </data>
+  <data name="ACTUAL PRESSURE" xml:space="preserve">
+    <value>Pressione Effettiva</value>
+  </data>
+  <data name="WATER PRESSURE" xml:space="preserve">
+    <value>Pressione Dell'Acqua</value>
+  </data>
+  <data name="HEAT EXCHANGER TEMPERATURE" xml:space="preserve">
+    <value>Temperatura Scambiatore Di Calore</value>
+  </data>
+  <data name="ACTUAL POSITION" xml:space="preserve">
+    <value>Posizione Attuale</value>
+  </data>
+  <data name="THERMOREGULATION" xml:space="preserve">
+    <value>Termoregolazione</value>
+  </data>
+  <data name="MODULATION CONTROL" xml:space="preserve">
+    <value>Controllo Della Modulazione</value>
+  </data>
+  <data name="VALVE OPEN SETPOINT" xml:space="preserve">
+    <value>Setpoint Valvola Aperta</value>
+  </data>
+  <data name="WATER PUMP FULL RUNNING" xml:space="preserve">
+    <value>Pompa Dell'Acqua A Pieno Regime</value>
+  </data>
+  <data name="INLET WATER PRESSURE" xml:space="preserve">
+    <value>Pressione Dell'Acqua In Ingresso</value>
+  </data>
+  <data name="DIGITAL INPUTS PROTECTION" xml:space="preserve">
+    <value>Protezione Degli Ingressi Digitali</value>
+  </data>
+  <data name="DIGITAL OUTPUTS PROTECTION" xml:space="preserve">
+    <value>Protezione Delle Uscite Digitali</value>
+  </data>
+  <data name="INTERNAL DEVICES PROTECTION" xml:space="preserve">
+    <value>Protezione Dei Dispositivi Interni</value>
+  </data>
+  <data name="EXTERNAL DEVICES PROTECTION" xml:space="preserve">
+    <value>Protezione Dei Dispositivi Esterni</value>
+  </data>
+  <data name="BEACON PROTECTION" xml:space="preserve">
+    <value>Protezione Del Faro</value>
+  </data>
+  <data name="MASTER ESTOP" xml:space="preserve">
+    <value>E-Stop Principale</value>
+  </data>
+  <data name="ETHERNET SWITCH" xml:space="preserve">
+    <value>Switch Ethernet</value>
+  </data>
+  <data name="SIREN" xml:space="preserve">
+    <value>Sirena</value>
+  </data>
+  <data name="EXTERNAL SIREN" xml:space="preserve">
+    <value>Sirena Esterna</value>
+  </data>
+  <data name="CRITICAL FAULT IN THE ELECTRICAL CABINET" xml:space="preserve">
+    <value>Guasto Critico Nell'Armadio Elettrico</value>
+  </data>
+  <data name="NO DATA" xml:space="preserve">
+    <value>Nessun Dato</value>
+  </data>
+  <data name="WASHING TANK OVER MINIMUM TEMPERATURE" xml:space="preserve">
+    <value>Vasca Di Lavaggio Oltre La Temperatura Minim</value>
+  </data>
+  <data name="TIME_CYCLE" xml:space="preserve">
+    <value>Tempo Ciclo</value>
+  </data>
+  <data name="FIELD_ADJUST" xml:space="preserve">
+    <value>Regolazione in Campo</value>
+  </data>
 </root>
