--- a/Prevu.Localization/Properties/Resources.resx
+++ b/Prevu.Localization/Properties/Resources.resx
@@ -1348,7 +1348,421 @@
     <value>New Alarm</value>
     <comment>Component Status</comment>
   </data>
-  <data name="" xml:space="preserve">
-    <value></value>
+  <data name="PLANT VIEW" xml:space="preserve">
+    <value>Plant View</value>
+  </data>
+  <data name="PRODUCTION CYCLE" xml:space="preserve">
+    <value>Prodution Line</value>
+  </data>
+  <data name="STOP CYCLE ON" xml:space="preserve">
+    <value>Stop Cycle ON</value>
+  </data>
+  <data name="STOP CYCLE PENDING" xml:space="preserve">
+    <value>Stop Cycle Pending</value>
+  </data>
+  <data name="ZONE PREPARED" xml:space="preserve">
+    <value>Zone Prepared</value>
+  </data>
+  <data name="MAINTENANCE MODE" xml:space="preserve">
+    <value>Maintenance Mode</value>
+  </data>
+  <data name="DISABLED MODE" xml:space="preserve">
+    <value>Disabled Mode</value>
+  </data>
+  <data name="ESTOP NOT OK" xml:space="preserve">
+    <value>Estop Not OK</value>
+  </data>
+  <data name="ESTOP OK" xml:space="preserve">
+    <value>Estop OK</value>
+  </data>
+  <data name="AUTOMATIC MODE" xml:space="preserve">
+    <value>Automatic Mode</value>
+  </data>
+  <data name="DETAILS" xml:space="preserve">
+    <value>Details</value>
+  </data>
+  <data name="CREATE NEW USER GROUP" xml:space="preserve">
+    <value>Create New User Group</value>
+  </data>
+  <data name="PASSWORD" xml:space="preserve">
+    <value>Password</value>
+  </data>
+  <data name="SAVE ALL" xml:space="preserve">
+    <value>Save All</value>
+  </data>
+  <data name="ELECTRICAL DRAWING" xml:space="preserve">
+    <value>Electrical Drawing</value>
+  </data>
+  <data name="LOADING" xml:space="preserve">
+    <value>Loading</value>
+  </data>
+  <data name="PROGRESS" xml:space="preserve">
+    <value>Progress</value>
+  </data>
+  <data name="WEIGHT" xml:space="preserve">
+    <value>Weight</value>
+  </data>
+  <data name="FLOWRATE" xml:space="preserve">
+    <value>Flowrate</value>
+  </data>
+  <data name="REFERENCE" xml:space="preserve">
+    <value>Reference</value>
+  </data>
+  <data name="PRESSURE" xml:space="preserve">
+    <value>Pressure</value>
+  </data>
+  <data name="EVENT PAGE" xml:space="preserve">
+    <value>Event Page</value>
+  </data>
+  <data name="CRITICAL ALARM!" xml:space="preserve">
+    <value>Critical Alarm!</value>
+  </data>
+  <data name="CRITICAL FAULT PRESENT" xml:space="preserve">
+    <value>Critical Fault Present</value>
+  </data>
+  <data name="FULL RANGE ADJUST" xml:space="preserve">
+    <value>Full Range Adjust</value>
+  </data>
+  <data name="MOTOR CURRENT" xml:space="preserve">
+    <value>Motor Current</value>
+  </data>
+  <data name="SENSOR ID" xml:space="preserve">
+    <value>Sensor ID</value>
+  </data>
+  <data name="ELECTRICAL ID" xml:space="preserve">
+    <value>Electrical ID</value>
+  </data>
+  <data name="OK STATUS" xml:space="preserve">
+    <value>Ok Status</value>
+  </data>
+  <data name="EL. DRAWING" xml:space="preserve">
+    <value>El. Drawing</value>
+  </data>
+  <data name="MOTOR TEMPERATURE" xml:space="preserve">
+    <value>Motor Temperature</value>
+  </data>
+  <data name="OVERLOAD PROTECTION" xml:space="preserve">
+    <value>Overload Protection</value>
+  </data>
+  <data name="COMMAND ON" xml:space="preserve">
+    <value>Command ON</value>
+  </data>
+  <data name="NO CRITICAL FAULT" xml:space="preserve">
+    <value>No Critical Fault</value>
+  </data>
+  <data name="NO MINOR FAULT" xml:space="preserve">
+    <value>No Minor Fault</value>
+  </data>
+  <data name="LOCAL DISCONNECT" xml:space="preserve">
+    <value>Local Disconnect</value>
+  </data>
+  <data name="COMPONENT ENABLED" xml:space="preserve">
+    <value>Component Enabled</value>
+  </data>
+  <data name="RUN AUTO INTERLOCKS" xml:space="preserve">
+    <value>Run Auto Interlocks</value>
+  </data>
+  <data name="START AUTO INTERLOCKS" xml:space="preserve">
+    <value>Start Auto Interlocks</value>
+  </data>
+  <data name="NO-STOP AUTO INTERLOCKS" xml:space="preserve">
+    <value>Auto Interlocks - No Stop</value>
+  </data>
+  <data name="OVERLOAD MINIMUM TIME EXPIRED" xml:space="preserve">
+    <value>Overload Minimum Temperature Expired</value>
+  </data>
+  <data name="UPSTREAM SAFETY" xml:space="preserve">
+    <value>Upsream Safety</value>
+  </data>
+  <data name="DOWNSTREAM SAFETY" xml:space="preserve">
+    <value>Downstream Safety</value>
+  </data>
+  <data name="MINIMUM RESTART TIME" xml:space="preserve">
+    <value>Minimum Restart Time</value>
+  </data>
+  <data name="CURRENT OK FOR MATERIAL" xml:space="preserve">
+    <value>Current OK for material</value>
+  </data>
+  <data name="PLC CONNECTION LOST!" xml:space="preserve">
+    <value>PLC Connection Lost!</value>
+  </data>
+  <data name="SERVER CONNECTION LOST!" xml:space="preserve">
+    <value>Server Connection Lost!</value>
+  </data>
+  <data name="PLC SIMULATION" xml:space="preserve">
+    <value>PLC Simulation</value>
+  </data>
+  <data name="TIME CYCLE" xml:space="preserve">
+    <value>Time Cycle</value>
+  </data>
+  <data name="COMMAND OPEN" xml:space="preserve">
+    <value>Command Open</value>
+  </data>
+  <data name="UPSTREAM SAFETY (FALSE --&gt; RESET ENABLE)" xml:space="preserve">
+    <value>Upstream Safety (False --&gt; Reset Enable)</value>
+  </data>
+  <data name="DOWNSTREAM SAFETY (FALSE --&gt; RESET ENABLE)" xml:space="preserve">
+    <value>Downstream Safety (False --&gt; Reset Enable)</value>
+  </data>
+  <data name="MINIMUM OFF TIME OK FOR VALVE RESTART" xml:space="preserve">
+    <value>Minimum Off Time Ok For Valve Restart</value>
+  </data>
+  <data name="ON TIME ABOVE ZERO" xml:space="preserve">
+    <value>On Time Above Zero</value>
+  </data>
+  <data name="PAUSE TIME ENABLED" xml:space="preserve">
+    <value>Pause Time Enabled</value>
+  </data>
+  <data name="NOT IN PAUSE PHASE" xml:space="preserve">
+    <value>Not in Pause Phase</value>
+  </data>
+  <data name="COMMAND LINE" xml:space="preserve">
+    <value>Command Line</value>
+  </data>
+  <data name="COMMAND STAR" xml:space="preserve">
+    <value>Command Star</value>
+  </data>
+  <data name="COMMAND DELTA" xml:space="preserve">
+    <value>Command Delta</value>
+  </data>
+  <data name="NO DECELERATION" xml:space="preserve">
+    <value>No Deceleration</value>
+  </data>
+  <data name="SPEED SETPOINT" xml:space="preserve">
+    <value>Speed Setpoint</value>
+  </data>
+  <data name="INVERTER STATUS" xml:space="preserve">
+    <value>Inverter Status</value>
+  </data>
+  <data name="INVERTER RUNNING" xml:space="preserve">
+    <value>Inverter Running</value>
+  </data>
+  <data name="SAFETY" xml:space="preserve">
+    <value>Safety</value>
+  </data>
+  <data name="INVERTER POWER UP" xml:space="preserve">
+    <value>Inverter Power Up</value>
+  </data>
+  <data name="TEACH" xml:space="preserve">
+    <value>Teach</value>
+  </data>
+  <data name="EMPTY" xml:space="preserve">
+    <value>Empty</value>
+  </data>
+  <data name="MEASURE CONTROL" xml:space="preserve">
+    <value>Measure Control</value>
+  </data>
+  <data name="HOPPER LEVEL" xml:space="preserve">
+    <value>Hopper Level</value>
+  </data>
+  <data name="OK FOR PROCESS" xml:space="preserve">
+    <value>Ok For Process</value>
+  </data>
+  <data name="_OK_FOR_PROCESS" xml:space="preserve">
+    <value>Ok For Process</value>
+  </data>
+  <data name="GREASE MINIMUM LEVEL" xml:space="preserve">
+    <value>Grease Minimum Level</value>
+  </data>
+  <data name="PULL-CORD SAFETY" xml:space="preserve">
+    <value>Pull-Cord Safety</value>
+  </data>
+  <data name="COOLING OVERLOAD PROTECTION" xml:space="preserve">
+    <value>Cooling Overload Protection</value>
+  </data>
+  <data name="MECHANICAL OVERLOAD (REACTION ARM)" xml:space="preserve">
+    <value>Mechanical Overload (Reaction Arm)</value>
+  </data>
+  <data name="COMMAND RUN" xml:space="preserve">
+    <value>Command Run</value>
+  </data>
+  <data name="COOLING COMMAND ON" xml:space="preserve">
+    <value>Cooling Command On</value>
+  </data>
+  <data name="LOCAL SELECTOR" xml:space="preserve">
+    <value>Local Selector</value>
+  </data>
+  <data name="LAMP GREEN" xml:space="preserve">
+    <value>Lamp Green</value>
+  </data>
+  <data name="LAMP RED" xml:space="preserve">
+    <value>Lamp Red</value>
+  </data>
+  <data name="LOCAL ENABLE SELECTOR" xml:space="preserve">
+    <value>Local Enable Selector</value>
+  </data>
+  <data name="MAXIMUM LEVEL" xml:space="preserve">
+    <value>Maximum Level</value>
+  </data>
+  <data name="SEMIAUTO MODE" xml:space="preserve">
+    <value>Semiauto Mode</value>
+  </data>
+  <data name="SILO LEVEL" xml:space="preserve">
+    <value>Silo Level</value>
+  </data>
+  <data name="MATERIAL IN THE PROCESS" xml:space="preserve">
+    <value>Material In The Process</value>
+  </data>
+  <data name="CLOSE" xml:space="preserve">
+    <value>Close</value>
+  </data>
+  <data name="POSITION" xml:space="preserve">
+    <value>Position</value>
+  </data>
+  <data name="POSITION OPEN" xml:space="preserve">
+    <value>Position Open</value>
+  </data>
+  <data name="POSITION CLOSED" xml:space="preserve">
+    <value>Position Closed</value>
+  </data>
+  <data name="COMMAND CLOSE" xml:space="preserve">
+    <value>Command Close</value>
+  </data>
+  <data name="OPPOSITE VALVE OK TO OPEN" xml:space="preserve">
+    <value>Opposite Valve Ok To Open</value>
+  </data>
+  <data name="VALVE FULLY CLOSED" xml:space="preserve">
+    <value>Valve Fully Closed</value>
+  </data>
+  <data name="CYLINDER PRESSURE AVAILABLE" xml:space="preserve">
+    <value>Cylinder Pressure Available</value>
+  </data>
+  <data name="MINIMUM LEVEL OK FOR PUMPING" xml:space="preserve">
+    <value>Minimum Level Ok For Pumping</value>
+  </data>
+  <data name="DOWNSTREAM DESTINATION OK/READY TO RECEIVE" xml:space="preserve">
+    <value>Downstream Destination Ok/Ready To Receive</value>
+  </data>
+  <data name="WEIGHT CONTROL" xml:space="preserve">
+    <value>Weight Control</value>
+  </data>
+  <data name="BOWL WEIGHT" xml:space="preserve">
+    <value>Bowl Weight</value>
+  </data>
+  <data name="BOWL FILLING POSITION" xml:space="preserve">
+    <value>Bowl Filling Position</value>
+  </data>
+  <data name="ACS - DOSING CYCLE BY WEIGHT" xml:space="preserve">
+    <value>ACS - Dosing Cycle By Weight</value>
+  </data>
+  <data name="ACS - DOSING CYCLE BY TIME" xml:space="preserve">
+    <value>ACS - Dosing Cycle By Time</value>
+  </data>
+  <data name="DOSING" xml:space="preserve">
+    <value>Dosing</value>
+  </data>
+  <data name="TARGETS" xml:space="preserve">
+    <value>Targets</value>
+  </data>
+  <data name="BOWL IN FILLING POSITION" xml:space="preserve">
+    <value>Bowl In Filling Position</value>
+  </data>
+  <data name="WASHING TANK BELOW MAXIMUM LEVEL" xml:space="preserve">
+    <value>Washing Tank Below Maximum Level</value>
+  </data>
+  <data name="WASHING TEMPERATURE OVER MINIMUM TEMPERATURE" xml:space="preserve">
+    <value>Washing Temperature Over Minimum Temperature</value>
+  </data>
+  <data name="WEIGHT SENSOR OK" xml:space="preserve">
+    <value>Weight Sensor Ok</value>
+  </data>
+  <data name="CAUSTIC VALVE READY" xml:space="preserve">
+    <value>Caustic Valve Ready</value>
+  </data>
+  <data name="DETERGENT VALVE READY" xml:space="preserve">
+    <value>Detergent Valve Ready</value>
+  </data>
+  <data name="WATER VALVE READY" xml:space="preserve">
+    <value>Water Valve Ready</value>
+  </data>
+  <data name="DOSING CYCLE OFF" xml:space="preserve">
+    <value>Dosing Cycle Off</value>
+  </data>
+  <data name="WATER EXCHANGE" xml:space="preserve">
+    <value>Water Exchange</value>
+  </data>
+  <data name="HOLDING TANK LEVEL" xml:space="preserve">
+    <value>Holding Tank Level</value>
+  </data>
+  <data name="ACTUAL FLOWRATE" xml:space="preserve">
+    <value>Actual Flowrate</value>
+  </data>
+  <data name="TOTALIZED" xml:space="preserve">
+    <value>Totalized</value>
+  </data>
+  <data name="FLOWRATE TOTALIZED PULSE" xml:space="preserve">
+    <value>Flowrate Totalized Pulse</value>
+  </data>
+  <data name="REFILL" xml:space="preserve">
+    <value>Refill</value>
+  </data>
+  <data name="ACTUAL PRESSURE" xml:space="preserve">
+    <value>Actual Pressure</value>
+  </data>
+  <data name="WATER PRESSURE" xml:space="preserve">
+    <value>Water Pressure</value>
+  </data>
+  <data name="HEAT EXCHANGER TEMPERATURE" xml:space="preserve">
+    <value>Heat Exchanger Temperature</value>
+  </data>
+  <data name="ACTUAL POSITION" xml:space="preserve">
+    <value>Actual Position</value>
+  </data>
+  <data name="THERMOREGULATION" xml:space="preserve">
+    <value>Thermoregulation</value>
+  </data>
+  <data name="MODULATION CONTROL" xml:space="preserve">
+    <value>Modulation Control</value>
+  </data>
+  <data name="VALVE OPEN SETPOINT" xml:space="preserve">
+    <value>Valve Open Setpoint</value>
+  </data>
+  <data name="WATER PUMP FULL RUNNING" xml:space="preserve">
+    <value>Water Pump Full Running</value>
+  </data>
+  <data name="INLET WATER PRESSURE" xml:space="preserve">
+    <value>Inlet Water Pressure</value>
+  </data>
+  <data name="DIGITAL INPUTS PROTECTION" xml:space="preserve">
+    <value>Digital Inputs Protection</value>
+  </data>
+  <data name="DIGITAL OUTPUTS PROTECTION" xml:space="preserve">
+    <value>Digital Outputs Protection</value>
+  </data>
+  <data name="INTERNAL DEVICES PROTECTION" xml:space="preserve">
+    <value>Internal Devices Protection</value>
+  </data>
+  <data name="EXTERNAL DEVICES PROTECTION" xml:space="preserve">
+    <value>External Devices Protection</value>
+  </data>
+  <data name="BEACON PROTECTION" xml:space="preserve">
+    <value>Beacon Protection</value>
+  </data>
+  <data name="MASTER ESTOP" xml:space="preserve">
+    <value>Master Estop</value>
+  </data>
+  <data name="ETHERNET SWITCH" xml:space="preserve">
+    <value>Ethernet Switch</value>
+  </data>
+  <data name="SIREN" xml:space="preserve">
+    <value>Siren</value>
+  </data>
+  <data name="EXTERNAL SIREN" xml:space="preserve">
+    <value>External Siren</value>
+  </data>
+  <data name="CRITICAL FAULT IN THE ELECTRICAL CABINET" xml:space="preserve">
+    <value>Critical Fault In The Electrical Cabinet</value>
+  </data>
+  <data name="NO DATA" xml:space="preserve">
+    <value>No Data</value>
+  </data>
+  <data name="WASHING TANK OVER MINIMUM TEMPERATURE" xml:space="preserve">
+    <value>Washing Tank Over Minimum Temperature</value>
+  </data>
+  <data name="TIME_CYCLE" xml:space="preserve">
+    <value>Time Cycle</value>
+  </data>
+  <data name="FIELD_ADJUST" xml:space="preserve">
+    <value>Field Adjust</value>
   </data>
 </root>
