--- a/Prevu.Localization/Properties/Resources.zh.resx
+++ b/Prevu.Localization/Properties/Resources.zh.resx
@@ -1041,4 +1041,379 @@
   <data name="ESTOP NOT OK" xml:space="preserve">
     <value>estop不正常</value>
   </data>
+  <data name="DETAILS" xml:space="preserve">
+    <value>细节</value>
+  </data>
+  <data name="CREATE NEW USER GROUP" xml:space="preserve">
+    <value>创建新用户组</value>
+  </data>
+  <data name="PASSWORD" xml:space="preserve">
+    <value>密码</value>
+  </data>
+  <data name="SAVE ALL" xml:space="preserve">
+    <value>保存全部</value>
+  </data>
+  <data name="ELECTRICAL DRAWING" xml:space="preserve">
+    <value>电气图纸</value>
+  </data>
+  <data name="LOADING" xml:space="preserve">
+    <value>正在加载</value>
+  </data>
+  <data name="PROGRESS" xml:space="preserve">
+    <value>进步</value>
+  </data>
+  <data name="WEIGHT" xml:space="preserve">
+    <value>重量</value>
+  </data>
+  <data name="FLOWRATE" xml:space="preserve">
+    <value>流量</value>
+  </data>
+  <data name="REFERENCE" xml:space="preserve">
+    <value>参考</value>
+  </data>
+  <data name="PRESSURE" xml:space="preserve">
+    <value>压力</value>
+  </data>
+  <data name="EVENT PAGE" xml:space="preserve">
+    <value>活动页面</value>
+  </data>
+  <data name="CRITICAL ALARM!" xml:space="preserve">
+    <value>紧急警报！</value>
+  </data>
+  <data name="CRITICAL FAULT PRESENT" xml:space="preserve">
+    <value>存在严重故障</value>
+  </data>
+  <data name="FULL RANGE ADJUST" xml:space="preserve">
+    <value>全范围调整</value>
+  </data>
+  <data name="MOTOR CURRENT" xml:space="preserve">
+    <value>电机电流</value>
+  </data>
+  <data name="SENSOR ID" xml:space="preserve">
+    <value>传感器 ID</value>
+  </data>
+  <data name="ELECTRICAL ID" xml:space="preserve">
+    <value>电气标识</value>
+  </data>
+  <data name="OK STATUS" xml:space="preserve">
+    <value>正常状态</value>
+  </data>
+  <data name="EL. DRAWING" xml:space="preserve">
+    <value>埃尔。绘画</value>
+  </data>
+  <data name="MOTOR TEMPERATURE" xml:space="preserve">
+    <value>电机温度</value>
+  </data>
+  <data name="OVERLOAD PROTECTION" xml:space="preserve">
+    <value>过载保护</value>
+  </data>
+  <data name="COMMAND ON" xml:space="preserve">
+    <value>命令开启</value>
+  </data>
+  <data name="NO CRITICAL FAULT" xml:space="preserve">
+    <value>无严重故障</value>
+  </data>
+  <data name="NO MINOR FAULT" xml:space="preserve">
+    <value>无小故障</value>
+  </data>
+  <data name="LOCAL DISCONNECT" xml:space="preserve">
+    <value>本地断开</value>
+  </data>
+  <data name="COMPONENT ENABLED" xml:space="preserve">
+    <value>启用组件</value>
+  </data>
+  <data name="RUN AUTO INTERLOCKS" xml:space="preserve">
+    <value>运行自动联锁</value>
+  </data>
+  <data name="START AUTO INTERLOCKS" xml:space="preserve">
+    <value>启动自动联锁</value>
+  </data>
+  <data name="NO-STOP AUTO INTERLOCKS" xml:space="preserve">
+    <value>自动联锁 - 不停歇</value>
+  </data>
+  <data name="OVERLOAD MINIMUM TIME EXPIRED" xml:space="preserve">
+    <value>过载最低温度已过期</value>
+  </data>
+  <data name="UPSTREAM SAFETY" xml:space="preserve">
+    <value>上游安全</value>
+  </data>
+  <data name="DOWNSTREAM SAFETY" xml:space="preserve">
+    <value>下游安全</value>
+  </data>
+  <data name="MINIMUM RESTART TIME" xml:space="preserve">
+    <value>最短重启时间</value>
+  </data>
+  <data name="CURRENT OK FOR MATERIAL" xml:space="preserve">
+    <value>材料的电流OK</value>
+  </data>
+  <data name="PLC CONNECTION LOST!" xml:space="preserve">
+    <value>PLC 连接丢失！</value>
+  </data>
+  <data name="SERVER CONNECTION LOST!" xml:space="preserve">
+    <value>服务器连接丢失！</value>
+  </data>
+  <data name="PLC SIMULATION" xml:space="preserve">
+    <value>PLC模拟</value>
+  </data>
+  <data name="TIME CYCLE" xml:space="preserve">
+    <value>时间周期</value>
+  </data>
+  <data name="COMMAND OPEN" xml:space="preserve">
+    <value>命令打开</value>
+  </data>
+  <data name="UPSTREAM SAFETY (FALSE --&gt; RESET ENABLE)" xml:space="preserve">
+    <value>上游安全（假 --&gt; 重置启用）</value>
+  </data>
+  <data name="DOWNSTREAM SAFETY (FALSE --&gt; RESET ENABLE)" xml:space="preserve">
+    <value>下游安全（假 --&gt; 重置启用）</value>
+  </data>
+  <data name="MINIMUM OFF TIME OK FOR VALVE RESTART" xml:space="preserve">
+    <value>阀门重启的最短关闭时间正常</value>
+  </data>
+  <data name="ON TIME ABOVE ZERO" xml:space="preserve">
+    <value>准时高于零</value>
+  </data>
+  <data name="PAUSE TIME ENABLED" xml:space="preserve">
+    <value>暂停时间已启用</value>
+  </data>
+  <data name="NOT IN PAUSE PHASE" xml:space="preserve">
+    <value>不在暂停阶段</value>
+  </data>
+  <data name="COMMAND LINE" xml:space="preserve">
+    <value>命令行</value>
+  </data>
+  <data name="COMMAND STAR" xml:space="preserve">
+    <value>指挥星</value>
+  </data>
+  <data name="COMMAND DELTA" xml:space="preserve">
+    <value>指挥三角洲</value>
+  </data>
+  <data name="NO DECELERATION" xml:space="preserve">
+    <value>无减速</value>
+  </data>
+  <data name="SPEED SETPOINT" xml:space="preserve">
+    <value>速度设定值</value>
+  </data>
+  <data name="INVERTER STATUS" xml:space="preserve">
+    <value>逆变器状态</value>
+  </data>
+  <data name="INVERTER RUNNING" xml:space="preserve">
+    <value>逆变器运行</value>
+  </data>
+  <data name="SAFETY" xml:space="preserve">
+    <value>安全</value>
+  </data>
+  <data name="INVERTER POWER UP" xml:space="preserve">
+    <value>逆变器上电</value>
+  </data>
+  <data name="TEACH" xml:space="preserve">
+    <value>教导</value>
+  </data>
+  <data name="EMPTY" xml:space="preserve">
+    <value>空的</value>
+  </data>
+  <data name="MEASURE CONTROL" xml:space="preserve">
+    <value>测量控制</value>
+  </data>
+  <data name="HOPPER LEVEL" xml:space="preserve">
+    <value>料斗水平</value>
+  </data>
+  <data name="OK FOR PROCESS" xml:space="preserve">
+    <value>好的过程</value>
+  </data>
+  <data name="_OK_FOR_PROCESS" xml:space="preserve">
+    <value>好的过程</value>
+  </data>
+  <data name="GREASE MINIMUM LEVEL" xml:space="preserve">
+    <value>润滑脂最低水平</value>
+  </data>
+  <data name="PULL-CORD SAFETY" xml:space="preserve">
+    <value>拉绳安全</value>
+  </data>
+  <data name="COOLING OVERLOAD PROTECTION" xml:space="preserve">
+    <value>冷却过载保护</value>
+  </data>
+  <data name="MECHANICAL OVERLOAD (REACTION ARM)" xml:space="preserve">
+    <value>机械过载（反作用力臂）</value>
+  </data>
+  <data name="COMMAND RUN" xml:space="preserve">
+    <value>命令运行</value>
+  </data>
+  <data name="COOLING COMMAND ON" xml:space="preserve">
+    <value>冷却命令开启</value>
+  </data>
+  <data name="LOCAL SELECTOR" xml:space="preserve">
+    <value>本地选择器</value>
+  </data>
+  <data name="LAMP GREEN" xml:space="preserve">
+    <value>灯绿</value>
+  </data>
+  <data name="LAMP RED" xml:space="preserve">
+    <value>灯红</value>
+  </data>
+  <data name="LOCAL ENABLE SELECTOR" xml:space="preserve">
+    <value>本地启用选择器</value>
+  </data>
+  <data name="MAXIMUM LEVEL" xml:space="preserve">
+    <value>最高级别</value>
+  </data>
+  <data name="SEMIAUTO MODE" xml:space="preserve">
+    <value>半自动模式</value>
+  </data>
+  <data name="SILO LEVEL" xml:space="preserve">
+    <value>筒仓级别</value>
+  </data>
+  <data name="MATERIAL IN THE PROCESS" xml:space="preserve">
+    <value>过程中的材料</value>
+  </data>
+  <data name="CLOSE" xml:space="preserve">
+    <value>关闭</value>
+  </data>
+  <data name="POSITION" xml:space="preserve">
+    <value>位置</value>
+  </data>
+  <data name="POSITION OPEN" xml:space="preserve">
+    <value>职位空缺</value>
+  </data>
+  <data name="POSITION CLOSED" xml:space="preserve">
+    <value>平仓</value>
+  </data>
+  <data name="COMMAND CLOSE" xml:space="preserve">
+    <value>命令关闭</value>
+  </data>
+  <data name="OPPOSITE VALVE OK TO OPEN" xml:space="preserve">
+    <value>对面阀门可以打开</value>
+  </data>
+  <data name="VALVE FULLY CLOSED" xml:space="preserve">
+    <value>阀门完全关闭</value>
+  </data>
+  <data name="CYLINDER PRESSURE AVAILABLE" xml:space="preserve">
+    <value>气缸压力可用</value>
+  </data>
+  <data name="MINIMUM LEVEL OK FOR PUMPING" xml:space="preserve">
+    <value>泵送的最低液位OK</value>
+  </data>
+  <data name="DOWNSTREAM DESTINATION OK/READY TO RECEIVE" xml:space="preserve">
+    <value>下游目的地正常/准备接收</value>
+  </data>
+  <data name="WEIGHT CONTROL" xml:space="preserve">
+    <value>控制体重</value>
+  </data>
+  <data name="BOWL WEIGHT" xml:space="preserve">
+    <value>碗重量</value>
+  </data>
+  <data name="BOWL FILLING POSITION" xml:space="preserve">
+    <value>碗填充位置</value>
+  </data>
+  <data name="ACS - DOSING CYCLE BY WEIGHT" xml:space="preserve">
+    <value>ACS - 按重量计的给药周期</value>
+  </data>
+  <data name="ACS - DOSING CYCLE BY TIME" xml:space="preserve">
+    <value>ACS - 按时间的给药周期</value>
+  </data>
+  <data name="DOSING" xml:space="preserve">
+    <value>加药</value>
+  </data>
+  <data name="TARGETS" xml:space="preserve">
+    <value>目标</value>
+  </data>
+  <data name="BOWL IN FILLING POSITION" xml:space="preserve">
+    <value>碗在填充位置</value>
+  </data>
+  <data name="WASHING TANK BELOW MAXIMUM LEVEL" xml:space="preserve">
+    <value>洗涤槽低于最高水位</value>
+  </data>
+  <data name="WASHING TEMPERATURE OVER MINIMUM TEMPERATURE" xml:space="preserve">
+    <value>洗涤温度超过最低温度</value>
+  </data>
+  <data name="WEIGHT SENSOR OK" xml:space="preserve">
+    <value>重量传感器正常</value>
+  </data>
+  <data name="CAUSTIC VALVE READY" xml:space="preserve">
+    <value>腐蚀性阀门就绪</value>
+  </data>
+  <data name="DETERGENT VALVE READY" xml:space="preserve">
+    <value>清洁剂阀就绪</value>
+  </data>
+  <data name="WATER VALVE READY" xml:space="preserve">
+    <value>水阀就绪</value>
+  </data>
+  <data name="DOSING CYCLE OFF" xml:space="preserve">
+    <value>给药周期关闭</value>
+  </data>
+  <data name="WATER EXCHANGE" xml:space="preserve">
+    <value>换水</value>
+  </data>
+  <data name="HOLDING TANK LEVEL" xml:space="preserve">
+    <value>储罐液位</value>
+  </data>
+  <data name="ACTUAL FLOWRATE" xml:space="preserve">
+    <value>实际流量</value>
+  </data>
+  <data name="TOTALIZED" xml:space="preserve">
+    <value>累计</value>
+  </data>
+  <data name="FLOWRATE TOTALIZED PULSE" xml:space="preserve">
+    <value>流量累计脉冲</value>
+  </data>
+  <data name="REFILL" xml:space="preserve">
+    <value>笔芯</value>
+  </data>
+  <data name="ACTUAL PRESSURE" xml:space="preserve">
+    <value>实际压力</value>
+  </data>
+  <data name="WATER PRESSURE" xml:space="preserve">
+    <value>水压力</value>
+  </data>
+  <data name="HEAT EXCHANGER TEMPERATURE" xml:space="preserve">
+    <value>热交换器温度</value>
+  </data>
+  <data name="ACTUAL POSITION" xml:space="preserve">
+    <value>实际位置</value>
+  </data>
+  <data name="THERMOREGULATION" xml:space="preserve">
+    <value>体温调节</value>
+  </data>
+  <data name="MODULATION CONTROL" xml:space="preserve">
+    <value>调制控制</value>
+  </data>
+  <data name="VALVE OPEN SETPOINT" xml:space="preserve">
+    <value>阀门开度设定值</value>
+  </data>
+  <data name="WATER PUMP FULL RUNNING" xml:space="preserve">
+    <value>水泵全速运行</value>
+  </data>
+  <data name="INLET WATER PRESSURE" xml:space="preserve">
+    <value>进水压力</value>
+  </data>
+  <data name="DIGITAL INPUTS PROTECTION" xml:space="preserve">
+    <value>数字输入保护</value>
+  </data>
+  <data name="DIGITAL OUTPUTS PROTECTION" xml:space="preserve">
+    <value>数字输出保护</value>
+  </data>
+  <data name="INTERNAL DEVICES PROTECTION" xml:space="preserve">
+    <value>内部设备保护</value>
+  </data>
+  <data name="EXTERNAL DEVICES PROTECTION" xml:space="preserve">
+    <value>外部设备保护</value>
+  </data>
+  <data name="BEACON PROTECTION" xml:space="preserve">
+    <value>信标保护</value>
+  </data>
+  <data name="MASTER ESTOP" xml:space="preserve">
+    <value>大师 Estop</value>
+  </data>
+  <data name="ETHERNET SWITCH" xml:space="preserve">
+    <value>以太网交换机</value>
+  </data>
+  <data name="SIREN" xml:space="preserve">
+    <value>警笛</value>
+  </data>
+  <data name="EXTERNAL SIREN" xml:space="preserve">
+    <value>外部警报器</value>
+  </data>
+  <data name="CRITICAL FAULT IN THE ELECTRICAL CABINET" xml:space="preserve">
+    <value>电气柜中的严重故障</value>
+  </data>
 </root>
